[tool.poetry]
name = "libro"
version = "0.1.0"
description = ""
authors = ["Anastasiya Soloviova"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.33.1"
python-dotenv = "^1.2.2"
pandas = "^3.0.2"
openpyxl = "^3.1.5"
psycopg2-binary = "^2.9.12"
django = "^6.0.4"
pillow = "^12.2.0"
djangorestframework = "^3.17.1"
django-filter = "^25.2"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.13.5"
drf-yasg = "^1.21.15"
redis = "^7.4.0"
drf-nested-routers = "^0.95.0"
django-cors-headers = "^4.9.0"
celery = "^5.6.3"
geopy = "^2.4.1"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^26.3.1"
mypy = "^1.20.2"
isort = "^8.0.1"

[tool.isort]
line_length = 119

[tool.black]
line-length = 119
exclude = ''' ( /( \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist )/
    | foo.py
      ) '''

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-cov = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
